# fastapi_template

./: .env.sample  .gitignore  README.md  gunicorn.conf.example.py  pyproject.toml  requirements.dev.txt  requirements.txt  sample.env
backend/: application.py  asgi.py  dependencies.py  error.py  errors.py  logger.py  settings.py
backend/databases/: postgres.py  redis.py
backend/managers/: __init__.py  healthcheck.py  info.py
backend/routers/: __init__.py  basic.py  general.py  healthcheck.py  info.py
backend/schemas/: __init__.py  basic.py  general.py  healthcheck.py  info.py
docker/: docker-compose.yml
docker/app/: Dockerfile  old.Dockerfile
